# CppUtilities

./: .clang-tidy  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CppUtilities.cpp  CppUtilities.h  Folder.DotSettings  README.md
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  cpputest_integration.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
cmake/: CppUTestDiscovery.cmake
testdata/: data1.csv
tests/: CMakeLists.txt  test_file_handling.cpp  test_group_alpha.cpp  test_group_beta.cpp  test_main.cpp  test_new_feature.cpp  test_utilities.cpp
